<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="library">Медиатека</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="text_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

</resources>