<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:paddingStart="@dimen/padding_start"
    android:paddingEnd="15dp"
    android:paddingTop="@dimen/padding_top"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/headline_text"
        android:fontFamily="@font/yandexsansdisplay_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="@dimen/top_indention"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:background="@drawable/menubutton"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/search"
            android:textColor="@color/black_main"
            android:textSize="@dimen/headline_text"
            android:textAllCaps="false"
            app:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/space_between_btns"
            android:fontFamily="@font/yandexsansdisplay_regular"/>

        <Button
            android:id="@+id/library_button"
            android:background="@drawable/menubutton"
            app:icon="@drawable/ic_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:backgroundTint="@color/white"
            android:text="@string/library"
            android:textColor="@color/black_main"
            android:textSize="@dimen/headline_text"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/space_between_btns"
            android:fontFamily="@font/yandexsansdisplay_regular" />

        <Button
            android:id="@+id/settings_button"
            android:background="@drawable/menubutton"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/black_main"
            android:textSize="@dimen/headline_text"
            android:textAllCaps="false"
            app:backgroundTint="@color/white"
            android:fontFamily="@font/yandexsansdisplay_regular"/>
    </LinearLayout>
</LinearLayout>